// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop 1`] = `
<img
  alt="Alt prop"
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop empty 1`] = `
<img
  alt=""
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
<img
  alt="Item title"
  src="http://localhost:3000/something/@@images/image/preview"
/>
`;

exports[`PreviewImage renders a preview image with custom size 1`] = `
<img
  alt="Item title"
  src="http://localhost:3000/something/@@images/image/large"
/>
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  src="http://localhost:3000/something/@@images/image/preview"
/>
`;
